# diploma2021

./: .gitignore  CMakeLists.txt  package.xml
config/: perceptor.yaml
include/bcr_robot/perception/: map_perceptor_node.hh
include/bcr_robot/perception/perceptor/: door_perceptor.hh  perceptor.hh
src/node/: main_node.cc
src/perception/: map_perceptor_node.cc
src/perception/perceptor/: door_perceptor.cc  perceptor.cc
